A few new DOGE names at GSA

--- a/it_modernization/agency_comprehensive.yaml
+++ b/it_modernization/agency_comprehensive.yaml
@@ -3826,9 +3826,11 @@ GSA:
   - Derek Geissler
   - Joshua Hanley
   - Nicole Hollander
+  - Raj Jegannathan
   - Erica Jehling
   - Cole Killian
   - Jeremy Lewin
+  - Dave Malcher
   - Elon Musk
   - Adam Ramada
   - Frank Schuler
@@ -4070,6 +4072,32 @@ GSA:
     source: https://federalnewsnetwork.com/agency-oversight/2025/04/many-doge-officials-appear-on-gsas-security-shortlist-acting-head-says-nobody-working-for-doge-here/
     agency: GSA
     id: fSuPuFSV
+  - date: 2025-03-20
+    type: report
+    event: During an all-hands meeting, GSA Administrator Stephen Ehikian claimed there is no DOGE team within GSA. Nobody believes him.
+    named:
+    - Stephen Ehikian
+    source: https://www.wired.com/story/elon-musk-doge-mystery-general-services-administration/
+    agency: GSA
+    id: AW4amVgu
+  - date: 2025-03-20
+    type: report
+    event: Wired Magazine list DOGE staff stationed within GSA, all of whom were listed on GSA payroll on March 20
+    comment: Coristine, Shaotran, Hollander, and Farritor are all listed as volunteer SGEs
+    named:
+    - Thomas Shedd
+    - Riley Sennott
+    - Edward Coristine
+    - Nicole Hollander
+    - Jeremy Lewin
+    - Luke Farritor
+    - Kyle Schutt
+    - Nate Cavanaugh
+    - Justin Aimonetti
+    - Ashley Boizelle
+    source: https://www.wired.com/story/elon-musk-doge-mystery-general-services-administration/
+    agency: GSA
+    id: 8PXutJ5n
   - date: 2025-03-21
     type: report
     event: DOGE expands the GSAi chatbot rollout to more than 13,000 GSA employees
@@ -4101,6 +4129,15 @@ GSA:
     source: https://federalnewsnetwork.com/agency-oversight/2025/04/many-doge-officials-appear-on-gsas-security-shortlist-acting-head-says-nobody-working-for-doge-here/
     agency: GSA
     id: HQUguBSH
+  - date: 2025-04-24
+    type: report
+    event: Wired Magazine identifies two new DOGE staffers recently seen as employees within the GSA
+    named:
+    - Raj Jegannathan
+    - Dave Malcher
+    source: https://www.wired.com/story/elon-musk-doge-mystery-general-services-administration/
+    agency: GSA
+    id: MGxiRV2v
   systems:
     Notify.gov:
       name: Notify.gov
