--- a/it_modernization/people.yaml
+++ b/it_modernization/people.yaml
@@ -2,7 +2,7 @@
 meta:
   title: People
   version: 1.0.0
-  generated: 2025-04-25
+  generated: 2025-04-26
 
 people:
 
@@ -498,6 +498,11 @@ people:
       type: report
       event: In a court declaration in AFL-CIO vs. DOL, counsel for the plaintiffs Alexa Milton provides the names of two
         DOGE staffers at HHS who were not provided in the government's list of staffers there
+    - date: 2025-04-12
+      agency: CFPB
+      type: official
+      event: Emailing from his USAID email account, Jeremy Lewin provides Gavin Kliger and Adam Martinez with a letter to
+        use for RIFs at the CFPB
     - date: 2025-04-15
       agency: State
       type: promotion
@@ -1699,6 +1704,17 @@ people:
       type: report
       event: DOGE is reportedly planning to state a "hack-a-thon" in cooperation with Palantir to create a "mega API" to access
         IRS data
+    - date: 2025-04-12
+      agency: CFPB
+      type: official
+      event: Emailing from his USAID email account, Jeremy Lewin provides Gavin Kliger and Adam Martinez with a letter to
+        use for RIFs at the CFPB
+    - date: 2025-04-13
+      agency: CFPB
+      type: report
+      event: In an email, CFPB CIO Chris Chilbert reports that Gavin Kliger has been granted access to several unnamed systems.
+        He also asks to confirm that Gavin Kliger should have his access revoked to systems that let him deactivate employee
+        email accounts or lock them out of their laptops
     - date: 2025-04-17
       agency: CFPB
       type: report
