--- a/it_modernization/events.yaml
+++ b/it_modernization/events.yaml
@@ -2,7 +2,7 @@
 meta:
   title: Events
   version: 1.0.0
-  generated: 2025-04-25
+  generated: 2025-04-26
 
 events:
 
@@ -9893,6 +9893,52 @@ events:
     link: https://www.courtlistener.com/docket/69623558/state-of-new-york-v-donald-j-trump/
     agency: Treasury
 
+- date: 2025-04-12
+  type: official
+  event: Emailing from his USAID email account, Jeremy Lewin provides Gavin Kliger and Adam Martinez with a letter to use
+    for RIFs at the CFPB
+  source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277287/gov.uscourts.dcd.277287.128.2_1.pdf
+  case_no: 1:25-cv-00381
+  named:
+  - Gavin Kliger
+  - Jeremy Lewin
+  agency: CFPB
+  id: 3XxWRrBu
+  case_info:
+    name: National Treasury Employees Union v. Russell Vought (D.D.C.)
+    description: National Treasury Employees Union, representing employees across 37 federal agencies and departments including
+      the Consumer Financial Protection Bureau ("CFPB"), challenged the Trump Administration's efforts to shut down the CFPB
+      and requested a temporary restraining order against the CFPB and Acting Director Russell Vought. A federal judge ordered
+      the Administration to stop deleting and removing records, terminating employees without cause, or disbursing funds except
+      for operating expenses, while the case proceeds.
+    case_no: 1:25-cv-00381
+    date_filed: 2025-02-09
+    link: https://www.courtlistener.com/docket/69624423/national-treasury-employees-union-v-vought/
+    agency: CFPB
+
+- date: 2025-04-13
+  type: report
+  event: In an email, CFPB CIO Chris Chilbert reports that Gavin Kliger has been granted access to several unnamed systems.
+    He also asks to confirm that Gavin Kliger should have his access revoked to systems that let him deactivate employee email
+    accounts or lock them out of their laptops
+  case_no: 1:25-cv-00381
+  source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277287/gov.uscourts.dcd.277287.128.4_1.pdf
+  named:
+  - Gavin Kliger
+  agency: CFPB
+  id: N4uZjCyt
+  case_info:
+    name: National Treasury Employees Union v. Russell Vought (D.D.C.)
+    description: National Treasury Employees Union, representing employees across 37 federal agencies and departments including
+      the Consumer Financial Protection Bureau ("CFPB"), challenged the Trump Administration's efforts to shut down the CFPB
+      and requested a temporary restraining order against the CFPB and Acting Director Russell Vought. A federal judge ordered
+      the Administration to stop deleting and removing records, terminating employees without cause, or disbursing funds except
+      for operating expenses, while the case proceeds.
+    case_no: 1:25-cv-00381
+    date_filed: 2025-02-09
+    link: https://www.courtlistener.com/docket/69624423/national-treasury-employees-union-v-vought/
+    agency: CFPB
+
 - date: 2025-04-14
   type: legal
   case_no: 1:25-cv-00596
@@ -10365,3 +10411,11 @@ events:
   source: https://www.wired.com/story/elon-musk-doge-mystery-general-services-administration/
   agency: GSA
   id: MGxiRV2v
+
+- date: 2025-04-25
+  type: report
+  event: DOGE staff assigned to the FAA have reportedly enlisted government staff to work on a secret communications project
+    named "Project Lift," requiring them to sign NDAs. It is rumored to be about incorporating Starlink into FAA projects.
+  source: https://www.rollingstone.com/politics/politics-features/trump-musk-doge-faa-nda-secret-project-lift-1235325667/
+  agency: FAA
+  id: kTuTZoGk
