--- a/it_modernization/raw_data/events.yaml
+++ b/it_modernization/raw_data/events.yaml
@@ -6230,6 +6230,27 @@
   id: 7AvfSN6g
   source_title: New York et al v. Donald J. Trump (S.D.N.Y.)
 
+- date: 2025-04-12
+  type: official
+  event: Emailing from his USAID email account, Jeremy Lewin provides Gavin Kliger and Adam Martinez with a letter to use for RIFs at the CFPB
+  source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277287/gov.uscourts.dcd.277287.128.2_1.pdf
+  case_no: 1:25-cv-00381
+  named:
+  - Gavin Kliger
+  - Jeremy Lewin
+  agency: CFPB
+  id: 3XxWRrBu
+
+- date: 2025-04-13
+  type: report
+  event: In an email, CFPB CIO Chris Chilbert reports that Gavin Kliger has been granted access to several unnamed systems. He also asks to confirm that Gavin Kliger should have his access revoked to systems that let him deactivate employee email accounts or lock them out of their laptops
+  case_no: 1:25-cv-00381
+  source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277287/gov.uscourts.dcd.277287.128.4_1.pdf
+  named:
+  - Gavin Kliger
+  agency: CFPB
+  id: N4uZjCyt
+
 - date: 2025-04-14
   type: legal
   case_no: 1:25-cv-00596
@@ -6556,3 +6577,10 @@
   source: https://www.wired.com/story/elon-musk-doge-mystery-general-services-administration/
   agency: GSA
   id: MGxiRV2v
+
+- date: 2025-04-25
+  type: report
+  event: DOGE staff assigned to the FAA have reportedly enlisted government staff to work on a secret communications project named "Project Lift," requiring them to sign NDAs. It is rumored to be about incorporating Starlink into FAA projects.
+  source: https://www.rollingstone.com/politics/politics-features/trump-musk-doge-faa-nda-secret-project-lift-1235325667/
+  agency: FAA
+  id: kTuTZoGk
