--- a/it_modernization/people.yaml
+++ b/it_modernization/people.yaml
@@ -533,6 +533,10 @@ people:
       event: Tech staffers and contractors noticed a new unknown DOGE staffer was pushing code to a repo in the VA's Github
         instance. He also appeared to be using an AI tool to write code and was remarkably oblivious about what the requirements
         for government services are.
+    - date: 2025-04-25
+      agency: DOD
+      type: promotion
+      event: Justin Fulcher is named as a Senior Advisor to Pete Hegseth's office in the Pentagon
 
   Michael Mirski:
     agencies:
